<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"><ImageView android:id="@+id/ImageView01" android:layout_height="wrap_content" android:src="@drawable/ccbanner" android:layout_width="fill_parent" android:paddingLeft="20px" android:layout_marginRight="20px" android:paddingTop
</LinearLayout>





...
