...
                android:layout_height="match_parent"
                android:background="@color/cc_core_bg"
                android:orientation="vertical"
                android:padding="4dp"
                tools:viewBindingIgnore="true">
                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsv_home_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/home_gridview_buttons"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cvConnectMessage"
                            android:nestedScrollingEnabled="false"
                            android:scrollbars="vertical" />
                    </RelativeLayout>
...
