...
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/standard_spacer">

            <com.google.android.material.button.MaterialButton
                app:strokeColor="@color/cc_brand_color"
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_button_height"
                android:padding="@dimen/standard_spacer_half"
                android:paddingEnd="@dimen/standard_spacer"
                android:paddingStart="@dimen/standard_spacer"
...
