...
    <string name="no_gps_message" cc:translatable="true">The location providers on this device are currently disabled. Do you want to change those settings?</string>
    <string name="change_settings" cc:translatable="true">Change Settings</string>
    <string name="finding_location" cc:translatable="true">Finding Location...</string>
    <string name="found_location" cc:translatable="true">Location Found!</string>
    <string name="preference_help_mode_tray" cc:translatable="true">Display Rich Help Inline</string>
    <string name="reset_image" cc:translatable="true">Reset</string>
    <string name="save_and_close" cc:translatable="true">Save and Close</string>
    <string name="sign_button" cc:translatable="true">Gather Signature</string>
    <string name="markup_image" cc:translatable="true">Markup Image</string>
    <string name="draw_image" cc:translatable="true">Sketch Image</string>
    <string name="share" cc:translatable="true">Share</string>
    <string name="title_data_change_logs_activity" cc:translatable="true">Data Change Logs</string>
    <string name="commcare_logs" cc:translatable="true">CommCare Data Change Logs</string>
    <string name="clear_user_data_delete_form" cc:translatable="true">Delete Forms</string>
...
